<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/crime_imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"/>

                <ImageButton
                    android:id="@+id/crime_imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >


                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/route_title_label"
                    />

                <EditText
                    android:id="@+id/route_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/route_title_hint"
                    />
            </LinearLayout>
        </LinearLayout>


        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_details_label"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/route_quotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/quotation_array"
                />

            <Spinner
                android:id="@+id/route_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/color_array"
                />

        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_hint"
            />

        <EditText
            android:id="@+id/route_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/route_hint_hint"
            />


        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_creator"
            />

        <EditText
            android:id="@+id/route_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/route_creator_hint"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_progress"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/route_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


            <CheckBox
                android:id="@+id/route_in_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_in_second_label"
                />


        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_personal_comment"
            />

        <EditText
            android:id="@+id/route_personal_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/route_personal_comment_hint"
            />

    </LinearLayout>
</ScrollView>